set(LINEAR_SOLVER_SRC linear_solvers/linear_solver.cpp)
list(APPEND LINEAR_SOLVER_SRC linear_solvers/petsc_amg/petsc_amg.cpp)
list(APPEND LINEAR_SOLVER_SRC linear_solvers/petsc_amg/petsc_amg_coarse.cpp)
list(APPEND LINEAR_SOLVER_SRC linear_solvers_op/petsc_block_jacobi/petsc_block_jacobi_op.cpp)
list(APPEND LINEAR_SOLVER_SRC linear_solvers_op/pmultigrid/pmultigrid_op.cpp)
list(APPEND LINEAR_SOLVER_SRC linear_solvers/petsc_pmultigrid/petsc_pmultigrid.cpp)
list(APPEND LINEAR_SOLVER_SRC linear_solvers_op/petsc_inv_mass/petsc_inv_mass_op.cpp)

set(LINEAR_SOLVER_CPU_SRC linear_solvers/petsc_utils/utils.cpp)
list(APPEND LINEAR_SOLVER_CPU_SRC linear_solvers/petsc_block_jacobi/petsc_block_jacobi_cpu.cpp)
list(APPEND LINEAR_SOLVER_CPU_SRC linear_solvers/petsc_pmultigrid/petsc_pmultigrid_cpu.cpp)
list(APPEND LINEAR_SOLVER_CPU_SRC linear_solvers/petsc_inv_mass/petsc_inv_mass_cpu.cpp)

set(LINEAR_SOLVER_GPU_SRC linear_solvers/petsc_utils/utils.cu)
list(APPEND LINEAR_SOLVER_GPU_SRC linear_solvers/petsc_block_jacobi/petsc_block_jacobi_gpu.cu)
list(APPEND LINEAR_SOLVER_GPU_SRC linear_solvers/petsc_pmultigrid/petsc_pmultigrid_gpu.cu)
list(APPEND LINEAR_SOLVER_GPU_SRC linear_solvers/petsc_inv_mass/petsc_inv_mass_gpu.cu)

set(ALL_DIM_SRC timing.cpp matrices_op/poisson_matrix_op.cpp)
list(APPEND ALL_DIM_SRC matrices_op/poisson_coarse_matrix_op.cpp)
list(APPEND ALL_DIM_SRC matrices_op/poisson_semi_matrix_free_op.cpp)

set(ALL_DIM_CPU_SRC utils.cpp matrices/poisson_matrix_cpu.cpp)
list(APPEND ALL_DIM_CPU_SRC matrices/poisson_coarse_matrix_cpu.cpp)

set(ALL_DIM_GPU_SRC utils.cu matrices/poisson_matrix_gpu.cu)
list(APPEND ALL_DIM_GPU_SRC matrices/poisson_coarse_matrix_gpu.cu)

if(DIM EQUAL 2)
  set(COMMON_SRC ins2d_op.cpp solvers_op/2d/advection_solver_op.cpp)
  list(APPEND COMMON_SRC solvers_op/2d/ls_solver_op.cpp)
  list(APPEND COMMON_SRC solvers/2d/ls_utils/ls_reinit_poly.cpp)
  list(APPEND COMMON_SRC solvers_op/2d/mp_ins_solver_op.cpp)
  list(APPEND COMMON_SRC solvers_op/2d/ins_solver_op.cpp)
  list(APPEND COMMON_SRC solvers_op/2d/ce_solver_op.cpp)
  list(APPEND COMMON_SRC matrices_op/2d/poisson_mat_op.cpp)
  list(APPEND COMMON_SRC matrices_op/2d/factor_poisson_mat_op.cpp)
  list(APPEND COMMON_SRC matrices_op/2d/mm_poisson_mat_op.cpp)
  list(APPEND COMMON_SRC matrices_op/2d/factor_mm_poisson_mat_op.cpp)
  list(APPEND COMMON_SRC ${LINEAR_SOLVER_SRC})
  list(APPEND COMMON_SRC ${ALL_DIM_SRC})

  set(CPU_SRC solvers/2d/ls_utils/ls_reinit.cpp)
  list(APPEND CPU_SRC ${LINEAR_SOLVER_CPU_SRC})
  list(APPEND CPU_SRC ${ALL_DIM_CPU_SRC})

  set(GPU_SRC solvers/2d/ls_utils/ls_reinit_poly_eval_cuda.cu solvers/2d/ls_utils/ls_reinit.cu)
  list(APPEND GPU_SRC ${LINEAR_SOLVER_GPU_SRC})
  list(APPEND GPU_SRC ${ALL_DIM_GPU_SRC})

  set(SN_SRC solvers/2d/ls_utils/kd_tree.cpp)
  set(MPI_SRC solvers/2d/ls_utils/kd_tree_mpi.cpp mpi_helper_func.cpp)
  set(SN_CPU_SRC "")
  set(SN_GPU_SRC "")
  set(MPI_CPU_SRC "")
  set(MPI_GPU_SRC "")

  set(DIM_POSTFIX 2d)
elseif(DIM EQUAL 3)
  set(COMMON_SRC ins3d_op.cpp solvers_op/3d/advection_solver_op.cpp)
  list(APPEND COMMON_SRC solvers_op/3d/ins_solver_op.cpp)
  list(APPEND COMMON_SRC solvers_op/3d/ls_solver_op.cpp)
  list(APPEND COMMON_SRC solvers/3d/ls_utils/poly_approx.cpp)
  list(APPEND COMMON_SRC solvers/3d/ls_utils/kd_tree.cpp)
  list(APPEND COMMON_SRC solvers_op/3d/mp_ins_solver_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/poisson_matrix_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/poisson_coarse_matrix_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/poisson_semi_matrix_free_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/poisson_matrix_free_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/mm_poisson_matrix_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/mm_poisson_matrix_free_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/factor_poisson_matrix_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/factor_poisson_semi_matrix_free_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/factor_poisson_matrix_free_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/factor_mm_poisson_matrix_op.cpp)
  list(APPEND COMMON_SRC matrices_op/3d/factor_mm_poisson_matrix_free_op.cpp)
  list(APPEND COMMON_SRC ${LINEAR_SOLVER_SRC})
  list(APPEND COMMON_SRC ${ALL_DIM_SRC})

  set(CPU_SRC solvers/3d/ls_solver_cpu.cpp)
  list(APPEND CPU_SRC ${LINEAR_SOLVER_CPU_SRC})
  list(APPEND CPU_SRC ${ALL_DIM_CPU_SRC})

  set(GPU_SRC solvers/3d/ls_solver_gpu.cu)
  list(APPEND GPU_SRC matrices/3d/custom_kernels/custom_pmf_3d_mult_cells_emat.cu)
  list(APPEND GPU_SRC matrices/3d/custom_kernels/custom_pmf_3d_mult_cells.cu)
  list(APPEND GPU_SRC ${LINEAR_SOLVER_GPU_SRC})
  list(APPEND GPU_SRC ${ALL_DIM_GPU_SRC})

  set(MPI_SRC mpi_helper_func.cpp)
  list(APPEND MPI_SRC solvers/3d/ls_utils/kd_tree_mpi.cpp)

  set(DIM_POSTFIX 3d)
endif()

if(BUILD_SN AND BUILD_CPU)
  add_executable(ins${DIM_POSTFIX}_openmp ${COMMON_SRC} ${CPU_SRC} ${SN_SRC} ${SN_CPU_SRC} openmp/ins${DIM_POSTFIX}_kernels.cpp)
  target_link_libraries(ins${DIM_POSTFIX}_openmp -L${OP2_DIR}/lib -lop2_openmp -lop2_hdf5 ${HDF5_LIB} ${PETSC_LIB} ${ARMA_LIB} ${OPENBLAS_LIB} -L${OP2DGTOOLKIT_DIR}/lib -lop2dgtoolkit_${DIM_POSTFIX}_openmp -ldgtoolkit ${EXTRA_LIBS})
  target_compile_definitions(ins${DIM_POSTFIX}_openmp PRIVATE DG_DIM=${DIM} DG_ORDER=${ORDER} OP2_PARTITIONER=${PART_LIB_NAME} DG_COL_MAJ)
endif()

if(BUILD_SN AND BUILD_GPU)
  add_executable(ins${DIM_POSTFIX}_cuda ${COMMON_SRC} ${GPU_SRC} ${SN_SRC} ${SN_GPU_SRC} cuda/ins${DIM_POSTFIX}_kernels.cu)
  target_link_libraries(ins${DIM_POSTFIX}_cuda -L${OP2_DIR}/lib -lop2_cuda -lop2_hdf5 ${HDF5_LIB} ${PETSC_LIB} ${ARMA_LIB} ${OPENBLAS_LIB} CUDA::cudart_static CUDA::cublas -L${OP2DGTOOLKIT_DIR}/lib -lop2dgtoolkit_${DIM_POSTFIX}_cuda -ldgtoolkit ${EXTRA_LIBS})
  target_compile_definitions(ins${DIM_POSTFIX}_cuda PRIVATE BUILD_CUDA OP2_DG_CUDA INS_CUDA DG_DIM=${DIM} DG_ORDER=${ORDER} OP2_PARTITIONER=${PART_LIB_NAME} DG_COL_MAJ)
endif()

if(BUILD_MPI AND BUILD_CPU)
  add_executable(ins${DIM_POSTFIX}_mpi_openmp ${COMMON_SRC} ${CPU_SRC} ${MPI_SRC} ${MPI_CPU_SRC} openmp/ins${DIM_POSTFIX}_kernels.cpp)
  target_include_directories(ins${DIM_POSTFIX}_mpi_openmp PRIVATE ${MPI_CXX_INCLUDE_PATH})
  target_link_libraries(ins${DIM_POSTFIX}_mpi_openmp -L${OP2_DIR}/lib -lop2_mpi -lop2_openmp -lop2_hdf5 ${HDF5_LIB} ${ARMA_LIB} ${OPENBLAS_LIB} -L${OP2DGTOOLKIT_DIR}/lib -lop2dgtoolkit_${DIM_POSTFIX}_mpi_openmp -ldgtoolkit ${PART_LIB} ${EXTRA_LIBS} ${PETSC_LIB} ${MPI_CXX_LIBRARIES})
  target_compile_definitions(ins${DIM_POSTFIX}_mpi_openmp PRIVATE INS_MPI DG_DIM=${DIM} DG_ORDER=${ORDER} OP2_PARTITIONER=${PART_LIB_NAME} DG_COL_MAJ)
endif()

if(BUILD_MPI AND BUILD_GPU)
  add_executable(ins${DIM_POSTFIX}_mpi_cuda ${COMMON_SRC} ${GPU_SRC} ${MPI_SRC} ${MPI_GPU_SRC} cuda/ins${DIM_POSTFIX}_kernels.cu)
  target_include_directories(ins${DIM_POSTFIX}_mpi_cuda PRIVATE ${MPI_CXX_INCLUDE_PATH})
  target_link_libraries(ins${DIM_POSTFIX}_mpi_cuda -L${OP2_DIR}/lib -lop2_mpi_cuda -lop2_hdf5 ${HDF5_LIB} ${ARMA_LIB} CUDA::cudart_static CUDA::cublas -L${OP2DGTOOLKIT_DIR}/lib -lop2dgtoolkit_${DIM_POSTFIX}_mpi_cuda -ldgtoolkit ${PART_LIB} ${EXTRA_LIBS} ${PETSC_LIB} ${MPI_CXX_LIBRARIES})
  target_compile_definitions(ins${DIM_POSTFIX}_mpi_cuda PRIVATE BUILD_CUDA OP2_DG_CUDA INS_CUDA INS_MPI DG_DIM=${DIM} DG_ORDER=${ORDER} OP2_PARTITIONER=${PART_LIB_NAME} DG_COL_MAJ)
endif()
